# cpp-service

./: CMakeLists.txt  README.md  main.cpp  stl_writer.h
src/: hollowing.h  main.cpp  supporting.h  trianglemesh.cpp  trianglemesh.h
src/clipper/: CMakeLists.txt
src/glu-libtess/: .gitignore
src/libslic3r/: AABBTreeIndirect.hpp  ClipperUtils.cpp  ClipperUtils.hpp  ExPolygon.cpp  Geometry.cpp  Utils.hpp  libslic3r.h
src/libslic3r/Optimize/: NLoptOptimizer.hpp  Optimizer.hpp
src/libslic3r/SLA/: BoostAdapter.hpp  Clustering.cpp  Clustering.hpp  Concurrency.hpp  Contour3D.cpp  Contour3D.hpp  IndexedMesh.cpp  IndexedMesh.hpp  PadConfig.cpp  PadConfig.h  SpatIndex.cpp  SpatIndex.hpp  SupportPoint.hpp  SupportPointGenerator.cpp  SupportTree.cpp  SupportTree.hpp  SupportTreeBuilder.cpp  SupportTreeBuilder.hpp  SupportTreeBuildsteps.cpp  SupportTreeBuildsteps.hpp  SupportTreeConfig.hpp  SupportableMesh.h
test/: Makefile  client.cc  server.cc  test.cc
test-by-http/: Makefile  client.cc  server.cc
test-by-script/: command.sh
test-input/: autoargs.json  config_hollow.json  slices.json  teapot_10elev.stl
test-script/: command.sh
test-server/: Makefile  test-client.cc  test-server.cc
test-server/input/: config.json  input.stl  placeholders.json
